--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -39,8 +39,28 @@
 	code to remove failure chance in find_QPP_7_5
 	in get_QPP_7_2_4 prioritized values of QPP so that Q is a perfect square
 	
+2019/06/07
+	get_next_s_i requires mpz_t variables (sum/term) to be initialized (and cleared) outside the method (removes repetitive init and clear instructions)
+	
+2019/06/08
+	removed extra mpz_mod instructions from get_KL_m that were used for testing
+
+2019/06/13
+	SIDH_testing prime finding in utils.c optimized and now outputs primes uniquely (per file)
+		PrimesSIDH.sage added and implements the same method for comparison (no output to file)
+	get_next_RST_i requires mpz_t variables (tmp_var) to be initialized (and cleared) outside the method (removes repetitive init and clear instructions)
+
+
 
 
 
 Future Updates
 	More selectivity for f values in SIDH prime finding method could be added
+	Add optional printout of primality proof?
+	
+	
+	
+	
+	
+	
+	
